
syntax = "proto3";

option csharp_namespace = "Rira_TohidBadri_Crud.GRPC";

package person;

message Person {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birth_date = 5;
}

service PersonServices {
    rpc CreatePerson (Person) returns (PersonResponse);
    rpc GetPerson (PersonRequest) returns (Person);
    rpc UpdatePerson (Person) returns (PersonResponse);
    rpc DeletePerson (PersonRequest) returns (PersonResponse);
    rpc GetAllPersons (GetAllPersonsRequest) returns (GetAllPersonsResponse);
}

message PersonRequest {
    int32 id = 1;
}

message PersonResponse {
    string message = 1;
    bool success = 2;
}

message GetAllPersonsResponse {
    repeated Person persons = 1;
}

message GetAllPersonsRequest {
}