syntax = "proto3";

package person;

option csharp_namespace = "Rira_TohidBadri_Crud.Peresentation.proto";

message Person {
    int32 id = 1;
    string first_name = 2;
    string last_name = 3;
    string national_code = 4;
    string birth_date = 5;
}

service PersonService {
    rpc CreatePerson (Person) returns (PersonResponse);
    rpc GetPerson (PersonRequest) returns (Person);
    rpc UpdatePerson (Person) returns (PersonResponse);
    rpc DeletePerson (PersonRequest) returns (PersonResponse);
}

message PersonRequest {
    int32 id = 1;
}

message PersonResponse {
    string message = 1;
    bool success = 2;
}
